
    cmake_minimum_required(VERSION 3.10)
    project("ZombieShooter")
    set(CMAKE_CXX_STANDARD 11)
    set(CMAKE_CXX_STANDARD_REQUIRED ON)
    include_directories(/home/linuxbrew/.linuxbrew/opt/sfml)
    link_directories(/home/linuxbrew/.linuxbrew/opt/sfml/lib)
    file(GLOB SOURCES "*.cpp" "*.h")
    add_executable(${PROJECT_NAME} ${SOURCES})
    target_link_libraries(${PROJECT_NAME} sfml-graphics sfml-window sfml-system sfml-audio sfml-network)
    message(STATUS "C++ compiler: ${CMAKE_CXX_COMPILER}")
    message(STATUS "C compiler: ${CMAKE_C_COMPILER}")
    message(STATUS "Executable name: ${PROJECT_NAME}")